--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "nyholm/psr7": "^1.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "squizlabs/php_codesniffer": "^3.7"
     },
     "autoload": {
         "psr-4": {
